2009-01-10	Mark Ellis	<mark@mpellis.org.uk>

	* 0.13 release

2008-12-18	Mark Ellis	<mark@mpellis.org.uk>
	* dataserver.py - catch rapi errors from getting free space of unmounted
	mount points eg. \Network; now requires pyrapi2 >= 0.13

2008-07-15	Guido Diepen	<guido@guidodiepen.nl>
	* Bumped the version to 0.12

2008-06-19	Guido Diepen	<guido@guidodiepen.nl>
	* Fixed issue with closing messagebox telling the user to unlock his WM6
	device when the program does not have focus
	* Fixed a small problem with non-initialized global var in dataserver

2008-06-18	Guido Diepen	<guido@guidodiepen.nl>
	* Fixed leftOver sendMessage which does not exist anymore
	* Locked WM6 devices result in a messagebox being shown. When the user
	unlocks the device, this messagebox is automatically closed. 

2008-06-04	Guido Diepen	<guido@guidodiepen.nl>
	
	* Update the program to work with python-qt4.4.0 and greater. Just
	work-around the issues with autoconnecting of slots/signals
	* Update the program to work with hal-dccm. Thanks Mark Ellis for
	supplying the needed patches.

2008-04-15	Guido Diepen	<guido@guidodiepen.nl>
	
	* When the application is minimized, only show tray balloon message in in
	case of no bound partnerships. When application is shown, notify user with
	a dialog box (this will also be shown when app was iconified and gets
	activated later)
	* Upped version to 0.11.1 

2008-03-30	Guido Diepen	<guido@guidodiepen.nl>
	
	* Updated the partnership listing code. It will handle both the old and
	the new API of sync-engine (i.e. with or without Exchange partnerships)
	* Updated small forgotten update of counter variable. Now also on the
	ActiveSync Status screens all partnerships should be shown nicely.

2008-03-24	Guido Diepen	<guido@guidodiepen.nl>
	
	* Added splashscreen
	* Added error handling when creating partnerships. Sometimes sync-engine
	tries to rebind certain dtpt ports after creating new pship
	* Added ActiveSync status information to the mainscreen. When an